# event-demo

./: .clang-format  CMakeLists.txt
broker_application/: CMakeLists.txt
broker_application/inc/: broker.hpp  clientside.hpp  generatorside.hpp
broker_application/src/: broker.cpp  clientside.cpp  generatorside.cpp  main.cpp
client_application/: CMakeLists.txt
client_application/inc/: client.hpp
client_application/src/: client.cpp  main.cpp
docker/: Dockerfile  buildImage.sh  runImage.sh  startAll.sh
documentation/: ODC_Architecture_drawio
generator_application/: CMakeLists.txt
generator_application/inc/: generator.hpp
generator_application/src/: generator.cpp  main.cpp
utilities/: CMakeLists.txt
utilities/inc/: ConnectionDefinitions.hpp  handshaker.hpp
utilities/src/: handshaker.cpp
